--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.5</version>
+        </dependency>
     </dependencies>
 
     <build>
